--- a/notebooks/04_data_merging_and_comparism.ipynb
+++ b/notebooks/04_data_merging_and_comparism.ipynb
@@ -14,6 +14,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92f7771e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diabetes_data = pd.read_csv(\"../data/processed/diabetes_data_processed.csv\")\n",
+    "heart_data = pd.read_csv(\"../data/processed/heart_data_processed.csv\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "975752f1",
    "metadata": {},
