--- a/notebooks/05_eda_summary_and_insights.ipynb
+++ b/notebooks/05_eda_summary_and_insights.ipynb
@@ -30,6 +30,7 @@
     "- **Key Actions:**\n",
     "    - Identified invalid zero values in `Glucose`, `BloodPressure`, `SkinThickness`, `Insulin`, and `BMI`.\n",
     "    - **Imputation:** Replaced invalid zeros with `NaN` and imputed using the **median** to handle skewness.\n",
+    "    - **Data Types** Converted a categorical variable \"Outcome\"\n",
     "    - **Target:** `Outcome` (Binary: 0/1).\n",
     "\n",
     "### Heart Disease Dataset\n",
@@ -37,7 +38,7 @@
     "- **Structure:** ~303 rows, 14 features.\n",
     "- **Key Actions:**\n",
     "    - **Duplicates:** Identified and removed duplicate records to prevent data leakage.\n",
-    "    - **Data Types:** Converted categorical variables (e.g., `sex`, `cp`, `thal`) to proper category types for efficiency.\n",
+    "    - **Data Types:** Converted categorical variables (e.g., `sex`, `cp`, `thal`, `fbs`, `exang`, `restecg`, `slope`, `ca`) to proper category types for efficiency.\n",
     "    - **Target:** `target` (Binary: Presence/Absence of heart disease)."
    ]
   },
@@ -57,7 +58,8 @@
     "- **Correlations:**\n",
     "    - **Diabetes:** Expected correlations observed (e.g., `Glucose` vs `Outcome`, `Age` vs `Pregnancies`).\n",
     "    - **Heart Disease:** Strong associations found between `cp` (chest pain), `thalach` (max heart rate), and the target.\n",
-    "- **Multicollinearity:** Variance Inflation Factor (VIF) analysis was conducted. No critical multicollinearity requiring feature dropping was flagged, though some physiological correlations exist."
+    "- **Multicollinearity:** Variance Inflation Factor (VIF) analysis was conducted for both datasets. It revealed that several features (notably Glucose, BloodPressure and BMI for the Diabetes datset) and (Age, trestsbps, thal and thalach for heart_disease dataset) have high VIF values, indicating strong multicollinerarity.\n",
+    "    -**Implication** I must consider dimensionality reduction(removing or combining correlated features) before I train the logistic regresion model."
    ]
   },
   {
@@ -68,7 +70,7 @@
     "## 4. Data Merging Feasibility\n",
     "**Conclusion:** The datasets **cannot be merged**.\n",
     "- **Reasoning:** There is no unique, reliable common identifier (Primary Key) between the two datasets.\n",
-    "- **Implication:** We must build **two separate ML pipelines**—one for Heart Disease Risk and one for Diabetes Risk."
+    "- **Implication:** I must build **two separate ML pipelines**—one for Heart Disease Risk and one for Diabetes Risk."
    ]
   },
   {
@@ -78,23 +80,21 @@
    "source": [
     "## 5. Strategic Recommendations for Machine Learning\n",
     "\n",
-    "Based on the EDA, the following approach is recommended for the ML phase:\n",
-    "\n",
     "### Model Selection\n",
     "1.  **Baseline Model:** **Logistic Regression**\n",
     "    - *Why:* Provides a solid baseline and coefficients are directly interpretable (log-odds). Good for identifying linear risk factors.\n",
     "2.  **Challenger Model:** **Random Forest** or **XGBoost**\n",
-    "    - *Why:* Handles non-linear relationships, robust to outliers (which we found), and manages feature interactions automatically.\n",
+    "    - *Why:* Handles non-linear relationships, robust to outliers (which I found), and manages feature interactions automatically.\n",
     "\n",
     "### Evaluation Metrics\n",
     "- **Primary:** **ROC-AUC** (Area Under the Receiver Operating Characteristic Curve).\n",
-    "    - *Reason:* More robust than accuracy, especially if class imbalance exists.\n",
+    "    - *Reason:* More robust than accuracy, especially if class imbalance exists in the future.\n",
     "- **Secondary:** **Recall (Sensitivity)**.\n",
     "    - *Reason:* In health risk, false negatives (missing a high-risk patient) are more costly than false positives.\n",
     "\n",
     "### Explainability (XAI)\n",
-    "- Since \"black-box\" models like XGBoost may perform better, we **must** implement **SHAP (SHapley Additive exPlanations)**.\n",
-    "- This will allow us to answer: *\"Why is this specific person's risk score 0.73?\"* by showing the contribution of each feature (e.g., +0.2 from High Glucose, +0.1 from Age)."
+    "- Since \"black-box\" models like XGBoost may perform better, I **must** implement **SHAP (SHapley Additive exPlanations)**.\n",
+    "- This will allow my model to answer: *\"Why is this specific person's risk score 0.73?\"* by showing the contribution of each feature (e.g., +0.2 from High Glucose, +0.1 from Age)."
    ]
   }
  ],
